[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "setuptools>=42.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name="HardwareSampling"
dynamic = ["version"]
description="The Hardware Sampling (hws) library can be used to track hardware performance like clock frequency, memory usage, temperatures, or power draw. "
readme = "README.md"
authors = [
    { name = "HardwareSampling Contributors" },
    { name = "Marcel Breyer", email = "Marcel.Breyer@ipvs.uni-stuttgart.de" },
    { name = "Alexander Van Craen", email = "Alexander.Van-Craen@ipvs.uni-stuttgart.de" },
]
keywords = ["hardware", "sampling", "performance", "monitoring", "power", "temperature", "clock", "frequency", "memory", "usage"]


[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = ">=3.22"
cmake.verbose = true
logging.level = "DEBUG"
wheel.packages = []
wheel.install-dir = "HardwareSampling"
wheel.license-files = ["LICENSE"]
cmake.build-type = "Release"

install.strip = false


[tool.scikit-build.cmake.define]
HWS_ENABLE_PYTHON_BINDINGS="ON"

[tool.setuptools_scm]
